# Backend

./: Cargo.toml
.github/workflows/: builds.yml  clippy.yml  test.yml
src/: lib.rs  main.rs  result.rs
src/plugin/: database.rs  loader.rs  mod.rs  server.rs
src/plugin/default/: database.rs  mod.rs
