[package]
name = "backend"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
protobuf = "2.24.1"

serde_json = "1.0.64"
serde_yaml = "0.8.17"
envy = "0.4.2"

mysql = "21.0.0"
postgres = "0.19.1"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]
