[package]
name = "backend"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2018"

[dependencies]
serde_json = "1.0.64"
serde_yaml = "0.8.17"
envy = "0.4.2"

libloading = "0.7.0"
lazy_static = "1.4.0"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dev-dependencies]
# Used in some unit tests
tempfile = "3.2.0"